--- a/recipes.html
+++ b/recipes.html
@@ -12,7 +12,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content = "IE=Edge">
         <meta name = "viewport" content = "width=device-width, initial-scale=1.0">
-        <title>Meals by Michael</title>
+        <title>Meals by Michael - Recipes</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat+Underline:ital,wght@0,100..900;1,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Orbitron:wght@400..900&display=swap" rel="stylesheet">
@@ -45,10 +45,120 @@
             <div class = "card">
                 <div class = "flip-card-inner">
                     <div class = "flip-card-front">
-
+                        <img src = "lib/fetabruschetta.webp"></img>
+                        <h3>Feta Bruschetta</h3>
+                        <h5>Src: https://www.tasteofhome.com/recipes/feta-bruschetta/</h5>
                     </div>
                     <div class = "flip-card-back">
+                        <h3>Ingredients</h3>
+                        <ul>
+                            <li>1/4 cup butter, melted</li>
+                            <li>1/4 cup olive oil</li>
+                            <li>10 slices French bread (1 inch thick)</li>
+                            <li>1 package (4 ounces) crumbled feta cheese</li>
+                            <li>2 to 3 garlic cloves, minced</li>
+                            <li>1 tablespoon minced fresh basil or 1 teaspoon dried basil</li>
+                            <li>1 large tomato, seeded and chopped</li>
+                        </ul>
 
+                        <h3>Instructions</h3>
+                        <ol>
+                            <li>Preheat oven to 350°. In a small bowl, combine butter and oil; brush onto both sides of bread. Place on a baking sheet. Bake at 350° for 8-10 minutes or until lightly browned on top.</li>
+                            <li>Combine the feta cheese, garlic and basil; sprinkle over toast. Top with tomato. Bake 8-10 minutes longer or until heated through. Serve warm.</li>
+                        </ol>
+                    </div>
+                </div>
+            </div>
+            <div class = "card">
+                <div class = "flip-card-inner">
+                    <div class = "flip-card-front">
+                        <img src = "lib/bellpepperpasta.jpg"></img>
+                        <h3>Liv's Favorite: Bell Pepper Pasta</h3>
+                        <h5>Src: me - I make this for my girlfriend</h5>
+                    </div>
+                    <div class = "flip-card-back">
+                        <h3>Ingredients</h3>
+                        <ul>
+                            <li>1 cup vodka sauce</li>
+                            <li>1 cup dry penne noodles</li>
+                            <li>1 tbsp salt</li>
+                            <li>1/2 tbsp italian seasoning blend</li>
+                            <li>1 bell pepper, diced</li>
+                            <li>4 to 6 cups, water</li>
+                            <li>1/2 cup ricotta cheese</li>
+                        </ul>
+
+                        <h3>Instructions</h3>
+                        <ol>
+                            <li>Pour water into a pot and mix in salt. Begin heating the pot to a boil. While water heats, cook diced pepper at medium-low heat</li>
+                            <li>After pasta water begins to boil, while pasta is cooking, pour vodka sauce into saucepan with diced bell pepper. Mix italian seasoning blend into sauce</li>
+                            <li>Combine/finish: After pasta is al dente, combine drained pasta, vodka sauce, and ricotta. Mix until a creammy rose colored sauce forms.</li>
+                        </ol>
+                    </div>
+                </div>
+            </div>
+            <div class = "card">
+                <div class = "flip-card-inner">
+                    <div class = "flip-card-front">
+                        <img src = "lib/bakedsalmon.jpg"></img>
+                        <h3>Baked Salmon</h3>
+                        <h5>https://www.wellplated.com/baked-salmon-in-foil/</h5>
+                    </div>
+                    <div class = "flip-card-back">
+                        <h3>Ingredients</h3>
+                        <ul>
+                            <li>2 pound side of salmon boneless</li>
+                            <li>5 sprigs fresh rosemary</li>
+                            <li>2 small lemons</li>
+                            <li>2 tablespoons extra virgin olive oil</li>
+                            <li>1 teaspoon kosher salt</li>
+                            <li>¼ teaspoon ground black pepper</li>
+                            <li>4 cloves garlic peeled and roughly chopped</li>
+                            <li>Additional chopped fresh herbs</li>
+                        </ul>
+
+                        <h3>Instructions</h3>
+                        <ol>
+                            <li>Remove the salmon from the refrigerator and let stand at room temperature for 10 minutes while you prepare the other ingredients. Heat oven to 375 degrees F. Line a large baking dish or rimmed baking sheet with a large piece of aluminum foil.</li>
+                            <li>Lightly coat the foil with baking spay, then arrange 2 sprigs of the rosemary down the middle. Cut one of the lemons into thin slices and arrange half the slices down the middle with the rosemary. Place the salmon on top.</li>
+                            <li>Drizzle the salmon with the olive oil and sprinkle with the salt and pepper. Rub to coat, then scatter the garlic cloves over the top. Lay the remaining rosemary and lemon slices on top of the salmon. Juice the second lemon, then pour the juice over the top.</li>
+                            <li>Fold the sides of the aluminum foil up and over the top of the salmon until it is completely enclosed. If your piece of foil is not large enough, place a second piece on top and fold the edges under so that it forms a sealed packet. Leave a little room inside the foil for air to circulate.</li>
+                            <li>Bake the salmon for 15-20 minutes, until the salmon is almost completely cooked through at the thickest part. The cooking time will vary based on the thickness of your salmon. If your side is thinner (around 1-inch thick) check several minutes early to ensure your salmon does not overcook. If your piece is very thick (1 1/2 inches or more), it may need longer.</li>
+                            <li>Remove the salmon from the oven and carefully open the foil so that the top of the fish is completely uncovered (be careful of hot steam). Change the oven setting to broil, then return the fish to the oven and broil for 3 minutes, until the top of the salmon and the garlic are slightly golden and the fish is cooked through. Watch the salmon closely as it broils to make sure it doesn’t overcook and the garlic does not burn. Remove the salmon from the oven. If it still appears a bit underdone, you can wrap the foil back over the top and let it rest for a few minutes. Do not let it sit too long—salmon can progress from “not done” to “over done” very quickly. As soon as it flakes easily with a fork, it’s ready.</li>
+                            <li>To serve, cut the salmon into portions. Sprinkle with additional fresh herbs or top with an extra squeeze of lemon as desired.</li>
+                        </ol>
+                    </div>
+                </div>
+            </div>
+            <div class = "card">
+                <div class = "flip-card-inner">
+                    <div class = "flip-card-front">
+                        <img src = "lib/sesametofu.jpg"></img>
+                        <h3>Liv's Favorite: Sesame Tofu on Rice</h3>
+                        <h5>Src: me - I make this for my girlfriend</h5>
+                    </div>
+                    <div class = "flip-card-back">
+                        <h3>Ingredients</h3>
+                        <ul>
+                            <li>2 tbsp vegetable oil</li>
+                            <li>1 block extra firm tofu, pressed for 15-30 minutes</li>
+                            <li>1 bell pepper, cut into half strips</li>
+                            <li>1 tsp freshly minced garlic</li>
+                            <li>4 tbsp soy sauce</li>
+                            <li>1bsp sesame seed oil</li>
+                            <li>pepper to taste</li>
+                            <li>salt to taste</li>
+                            <li>4 tbsp corn starch</li>
+                            <li>1 cup white or jasmine rice par boiled or steamed</li>
+                        </ul>
+
+                        <h3>Instructions</h3>
+                        <ol>
+                            <li>Cook peppers at medium heat for 5 mins. While peppers cook, finish preparing tofu. To prepare tofu, cut the pressed block into square or rectangle cubes. Fill a shallow bowl or plate with corn starch and roll each piece of tofu in corn starch. Rolling it in corn starch will allow for it to crip up when fried.</li>
+                            <li>After peppers have cooked for a few minutes, add tofu, minced garlic, salt, pepper, veggie oil, and fry for 10 minutes at medium high-heat until desired texture is achieved, or crisp edges have begun to form.</li>
+                            <li>Lower the pan temperature to low heat and add soy sauce + seasame seed oil. Added a dash of corn starch may help thicken the sauce.</li>
+                            <li>Serve on top of cooked white or jasime rice.</li>
+                        </ol>
                     </div>
                 </div>
             </div>
