--- a/servicesform.html
+++ b/servicesform.html
@@ -12,7 +12,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content = "IE=Edge">
         <meta name = "viewport" content = "width=device-width, initial-scale=1.0">
-        <title>Meals by Michael</title>
+        <title>Meals by Michael - Service Request</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat+Underline:ital,wght@0,100..900;1,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Orbitron:wght@400..900&display=swap" rel="stylesheet">
